--- a/app/views/trials/_searchform.html.erb
+++ b/app/views/trials/_searchform.html.erb
@@ -13,7 +13,7 @@
   <%= radio_button_tag(:vt, "patient", (params[:vt] == "patient" ? true : false)) %>
 
   <!--  @TODO? Need to put in global variable for disease -->
-  <%= label_tag(:vt_patient, "I have a brain tumor") %>
+  <%= label_tag(:vt_patient, ClinicalTrialMatcher::Application.config.filter_label) %>
   <div class="clear"></div>
   <%= radio_button_tag(:vt, "control", (params[:vt] == "control" ? true : false)) %>
   <%= label_tag(:vt_control, "I am a control") %>
