--- a/app/views/importer/show.html.erb
+++ b/app/views/importer/show.html.erb
@@ -9,6 +9,8 @@
 
 <%= link_to "Run Importer", importer_run_path, method: :post %><br>
 <br>
+<%= link_to "Clear Last Import Date", importer_clear_date_path, method: :post %><br>
+<br>
 <%= link_to "Delete All Trials", importer_delete_all_path, method: :post %><br>
 <br>
 <%= link_to "View All Trials", root_path %><br>
