Temporarily removed link to register

--- a/app/views/trials/index.html.erb
+++ b/app/views/trials/index.html.erb
@@ -6,9 +6,9 @@
   <% if @trials.nil? || @trials.empty? %>
   <h3>Your search returned no results.</h3>
   <p>
-    Expand your search criteria or
-    <%= link_to "create an account", new_user_registration_path %>
-    and receive emails about future trials that you may be eligible for.
+    To match to trials, widen your search or expand your travel distance.
+<!--     <%= link_to "create an account", new_user_registration_path %>
+    and receive emails about future trials that you may be eligible for. -->
   </p>
   <% else %>
 
