--- a/app/views/trials/show.html.erb
+++ b/app/views/trials/show.html.erb
@@ -55,7 +55,7 @@
                 More Details<span class="expandIcon">▼</span>
         </div>
         <div class="td_purpose whitesmokeBorder" id="expandFullDescription" style="display: none;">
-            <p><%= @trial.detailed_description %></p>
+            <p><%= raw(@trial.output_description) %></p>
             <div id="studyDetailsContainer">
                 <table class="studyDetailsTable" border="0" cellpadding="0" cellspacing="0">
                     <tbody>
