Added link to clinicaltrials.gov trial page with logo

--- a/app/views/trials/show.html.erb
+++ b/app/views/trials/show.html.erb
@@ -172,7 +172,13 @@
         <div class="clear">
         </div>
     <div class="form-row">
+        <div class="alignleft">
         <%= link_to raw('&laquo; Back to Search'), :back %>    
+        </div>        
+        <div class="alignright">
+        View More Trial Info at 
+        <%= link_to (image_tag "logo-clinicaltrials.gif",:height => 30), "http://clinicaltrials.gov/ct2/show/#{@trial.nct_id}",:target => "_blank" %>
+        </div>
     </div>
     </div>
 
