--- a/app/views/trials/index.html.erb
+++ b/app/views/trials/index.html.erb
@@ -47,7 +47,7 @@
     <%=@trials.total_entries %>
     <%= @trials.total_entries.to_i >
     1 ? "trials" : "trial" %> by
-    <%= select_tag(:ot, options_for_select([['A-Z', 'title ASC'], ['Last Updated', 'lastchanged_date DESC']], params[:ot]||'abc' ), :onchange =>("$('#ot').submit()")) %></p>
+    <%= select_tag(:ot, options_for_select([['Last Updated', 'lastchanged_date DESC'], ['A-Z', 'title ASC']], params[:ot]||'abc' ), :onchange =>("$('#ot').submit()")) %></p>
 
 
   <% end %>
@@ -63,13 +63,11 @@
           <%= link_to trial.title, trial %></td>
       </tr>
 
-      <% if params[:ot] == "lastchanged_date DESC" %>
       <tr>
         <td>Date Updated:</td>
         <td>
           <%= trial.lastchanged_date.strftime("%m/%d/%Y") %></td>
       </tr>
-      <% end %>
       <tr>
         <td>Focus:</td>
         <td>
