--- a/app/views/importer/show.html.erb
+++ b/app/views/importer/show.html.erb
@@ -1,9 +1,13 @@
 <h1>Import Trials from ClinicalTrials.gov</h1>
 
+
 <% unless @import.blank? %>
 	<p style="font-size:1.2em;">The importer was last run at <span style="font-weight:bold;"><%= @import.datetime.strftime("%m/%d/%Y %H:%M")%></span>&nbsp;<span style="font-style:italic; font-size:0.6em; color:#333;"><%= time_ago_in_words(@import.datetime)%> ago</span></p>
 	<p><%= "#{pluralize(@import.valid_trials, "trial")} and #{pluralize(@import.valid_sites,"sites")} were added and/or updated in the last import run." %></p>
 <% end %>
+
+<p><%= "There are #{@trials.all.count} trials with #{@sites.all.count} site locations."  %></p>
+<p><%= "There are #{@sites.geocoded.count} geocoded sites but #{@sites.not_geocoded.count} are not geocoded."  %></p>
 
 <br>
 
