--- a/app/views/trials/show.html.erb
+++ b/app/views/trials/show.html.erb
@@ -1,5 +1,5 @@
 <div id="breadcrumbs">
-    <%= link_to raw('&laquo; Back to Search'), :back %>
+    <%= link_to raw('&laquo; Back to Search'), session[:search_results] %>
 </div>
 <div id="td_contents">        
         <h2 class="colorOrange"><%= @trial.title %></h2>
