Added css and js to header

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -87,6 +87,10 @@
     <link rel="apple-touch-icon" sizes="114x114" href="http://celiac.org/wp-content/themes/celiac/images/favicon/apple-touch-icon-76x76.png" />
     <link rel="apple-touch-icon" sizes="144x144" href="http://celiac.org/wp-content/themes/celiac/images/favicon/apple-touch-icon-152x152.png" />
 
+	  <%= stylesheet_link_tag :application %>
+	<%= javascript_include_tag "application" %>
+  	  <%= csrf_meta_tag %>
+
 </head>
 <body class="page page-id-3217 page-child parent-pageid-1775 page-template-default safari alt-style-default site-primary site-name-celiac-disease-foundation custom-background-empty layout-left-content">
 
