--- a/app/assets/stylesheets/trials.css.scss
+++ b/app/assets/stylesheets/trials.css.scss
@@ -1,6 +1,13 @@
 // Place all the styles related to the Trials controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#main{
+	width: 100%;
+}
+
+.search_bar .clear{
+	margin-top:1em;
+}
 
 td{
 	overflow: hidden;
