Added trials index action and updated link paths

--- a/app/views/importer/show.html.erb
+++ b/app/views/importer/show.html.erb
@@ -12,7 +12,7 @@
 <br>
 <%= link_to "Delete All Trials", importer_delete_all_path, method: :post %><br>
 <br>
-<%= link_to "View All Trials", root_path %><br>
+<%= link_to "View All Trials", trials_path %><br>
 
 <br>
 <hr>
