Added css styling to button

--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -1,3 +1,5 @@
 <h2>Test copy</h2>
 <br>
-<%= link_to "Browse Trials", trials_path %><br>
+<%= link_to "Browse Trials", trials_path, class: "btn btn-orange" %>
+<br>
+<br>
