added intro text to homepage and breadcrumbs

--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -1,5 +1,18 @@
-<h2>Test copy</h2>
+<div id="breadcrumbs">
+    <%= link_to raw('&laquo; Back to Search'), session[:search_results] %>
+</div>
+
+<h2>What is a Clinical Trial?</h2>
+<p>Clinical trials are biomedical or behavioral research studies that involve human volunteers. All the trials featured on our site relate to research focused on brain tumors. If you wish to find trials that relate to other illnesses, visit <a target="_blank" href="http://clinicaltrials.gov">clinicaltrials.gov</a>. Clinical trials are a vital part of the scientific research process for every disease and are essential to developing cures, therapies and treatments for people affected by brain tumors.</p>
+<p>An observational trial is one in which clinicians observe the volunteers as they are, without intervening on the participant. An interventional trial is one in which the researchers study the effects of a particular intervention, which could be a vaccine, drug, treatment, therapy or device. </p>
+
+<h2>Why should I consider volunteering for a clinical trial?</h2>
+
+<p>Across all diseases, 80 percent of clinical trials finish late due to difficulties enrolling participants and nearly one-third of trials fail to recruit a single subject and never even begin. Researchers have to test the effectiveness of new therapies, and each one could inspire or become a medical breakthrough. But, without clinical trial volunteers, there would be no trial, and these therapies will not see the light of day. You can play a part in clinical trials, and the first step is finding one that’s a good fit for you. You can start browsing trials in your area right now.</p>
+
 <br>
 <%= link_to "Browse Trials", trials_path, class: "btn btn-orange" %>
+<br>
+<br>
 <br>
 <br>
