--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -1,7 +1,7 @@
 <div id="breadcrumbs">
     <%= link_to raw('&laquo; Back to Search'), session[:search_results] %>
 </div>
-
+<div id="about">
 <h2>What is a Clinical Trial?</h2>
 <p>Clinical trials are biomedical or behavioral research studies that involve human volunteers. All the trials featured on our site relate to research focused on brain tumors. If you wish to find trials that relate to other illnesses, visit <a target="_blank" href="http://clinicaltrials.gov">clinicaltrials.gov</a>. Clinical trials are a vital part of the scientific research process for every disease and are essential to developing cures, therapies and treatments for people affected by brain tumors.</p>
 <p>An observational trial is one in which clinicians observe the volunteers as they are, without intervening on the participant. An interventional trial is one in which the researchers study the effects of a particular intervention, which could be a vaccine, drug, treatment, therapy or device. </p>
@@ -16,3 +16,4 @@
 <br>
 <br>
 <br>
+</div>
