--- a/app/views/trials/index.html.erb
+++ b/app/views/trials/index.html.erb
@@ -1,5 +1,6 @@
-
-
+<div id="breadcrumbs" style="margin:20px 0px">
+      <%= link_to raw('&laquo; Back to About'), '/' %>
+  </div>
 <div class="search_bar">
   <%= render "searchform" %></div>
 
