added subnav, minimized main title, styled search bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -175,8 +175,8 @@
 
 	<% end %> -->
         
-	<h1 id="h">
-		<a href="/">
+	<h1 id="h" class="mainTitle">
+		<a href="/" class="mainTitle">
     		Browse Clinical Trials
     	</a>
     </h1>
@@ -184,6 +184,15 @@
 
 
 	</div>
+<div class="subNav">
+	<h2><a href="/">About</a></h2>
+	<h2>|</h2>
+	<h2><a href="/trials">Browse Trials</a></h2>
+	<h2>|</h2>
+	<h2><a href="#">Register</a></h2>
+</div>
+
+
 </header>
 <!-- END ARTICLE HEADER -->
 
