--- a/app/views/trials/_searchform.html.erb
+++ b/app/views/trials/_searchform.html.erb
@@ -3,13 +3,15 @@
   <%= text_field_tag(:q, params[:q]) %>
 
   <div class="clear"></div>
-  <hr>
   <%= label_tag(:pc, "Zip Code:", :class => "inlineFormLabel") %>
+  <div style="clear:both"></div>
   <%= text_field_tag(:pc, params[:pc], :class => "inlineFormField") %>
+  <div class="clear"></div>
+  <%= label_tag(:td, "Travel Distance:", :class => "inlineFormLabel") %>
+  <div style="clear:both"></div>
   <%= select_tag(:td,
   options_for_select([['Will travel 25 miles', 25], ['Will travel 50 miles', 50], ['Will travel 100 miles', 100], ['Will travel 300 miles', 300]], params[:td]||100 )) %>
   <div class="clear"></div>
-  <hr>
   <%= radio_button_tag(:vt, "patient", (params[:vt] == "patient" ? true : false)) %>
 
   <!--  @TODO? Need to put in global variable for disease -->
@@ -18,21 +20,21 @@
   <%= radio_button_tag(:vt, "control", (params[:vt] == "control" ? true : false)) %>
   <%= label_tag(:vt_control, "I am a control") %>
   <div class="clear"></div>
-  <hr>
 
   <%= label_tag(:age, "Age:", :class => "inlineFormLabel") %>
+  <div style="clear:both"></div>
   <%= text_field_tag(:age, params[:age], :class => "inlineFormField") %>
   <div class="clear"></div>
 
   <%= label_tag(:gender, "Gender:", :class => "inlineFormLabel") %>
 
   <div class="genderContainer" >
+    <div style="clear:both"></div>
   <%= radio_button_tag(:gender, "male", (params[:gender] == "male" ? true : false)) %>
   <%= label_tag(:gender_male, "M") %>
   <%= radio_button_tag(:gender, "female", (params[:gender] == "female" ? true : false)) %>
   <%= label_tag(:gender_female, "F") %>
   </div>
-  <hr>
 
     <!-- EXPANDABLE PART OF FORM -->
     <% if params[:mf].present? %>
@@ -63,7 +65,6 @@ width: 110px;") %>
 
 
     <div class="clear"></div>
-    <hr>
 
 
 
@@ -72,7 +73,7 @@ width: 110px;") %>
   <%= hidden_field_tag 'mf', params[:mf], id: "mf_capture" %>
   <%= hidden_field_tag 'ot', params[:ot], id: "ot_capture" %>
 
-  <%= submit_tag("Update Results", :class => "btn btn-orange") %>
+  <%= submit_tag("Search Trials", :class => "btn btn-orange") %>
   <% end %>
 
 
