--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -51,9 +51,12 @@
 
 .search_bar {
   float: left;
-  width: 180px;
-  margin-right: 30px;
-  padding-left: 2px;
+  width: 20%;
+  margin: 40px 30px 0px 0px;
+  background: #ededed;
+  border-radius: 15px;
+  -webkit-border-radius: 15px;
+  padding: 20px
 }
 
 .search_bar input[type=radio] {
@@ -62,10 +65,11 @@ margin-right:1px;
 }
 .search_results{
   float:left;
-  width: 750px;
+  width: 70%;
 }
 .clear{
   clear:both;
+  margin: 20px 0px;
 }
 
 input[type=password], input[type=email], textarea {
@@ -160,7 +164,6 @@ input[type=email] {
   float:left;
   padding-right:5px;
   padding-top:3px;
-  margin-bottom:8px;
 }
 .inlineFormField{
   width:35%;
@@ -185,4 +188,27 @@ input[name=gender]{
 
 .genderContainer{
   margin-top: 2px;
+}
+.mainTitle:hover{
+  text-decoration: none;
+}
+.subNav{
+  font-size: 0.8em;
+  margin: 20px 0 0 70px;
+}
+.subNav h2{
+  display: inline;
+  color: grey;
+  margin: 0px 10px;
+}
+.subNav a{
+  text-decoration: none;
+}
+@media screen and (min-width: 1000px){
+    #h{
+    font-size: 2.75em; 
+  }
+}
+#td{
+    margin: 0 0 20px 0;
 }
