--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -54,8 +54,8 @@
   width: 20%;
   margin: 40px 30px 0px 0px;
   background: #ededed;
-  border-radius: 15px;
-  -webkit-border-radius: 15px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
   padding: 20px
 }
 
@@ -69,7 +69,7 @@ margin-right:1px;
 }
 .clear{
   clear:both;
-  margin: 20px 0px;
+  margin: 0px;
 }
 
 input[type=password], input[type=email], textarea {
@@ -210,5 +210,14 @@ input[name=gender]{
   }
 }
 #td{
-    margin: 0 0 20px 0;
+    margin: 0 0 20px 15px;
+}
+.btn-orange{
+  margin: 20px 0px;
+}
+input[type=text]{
+  margin-left: 10px;
+}
+.search_bar input[type=radio]{
+  margin-left: 17px;
 }
