styled search_bar

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -158,17 +158,14 @@ button.close {
 input[type=text],
 input[type=email] {
   padding: 0.25em;
-}
-
-.inlineFormLabel{
-  float:left;
-  padding-right:5px;
-  padding-top:3px;
+  width: 70%;
 }
 .inlineFormField{
   width:35%;
 }
-
+.inlineFormLabel{
+  float: left;
+}
 .inlineSelectLabel{
   float:left;
   padding-right:5px;
@@ -182,12 +179,9 @@ input[type=email] {
   margin-left: 10px;
 }
 
-input[name=gender]{
-  margin-left:10px;
-}
-
 .genderContainer{
-  margin-top: 2px;
+  float: left;
+  margin: 0 0 0 10px;
 }
 .mainTitle:hover{
   text-decoration: none;
@@ -210,14 +204,11 @@ input[name=gender]{
   }
 }
 #td{
-    margin: 0 0 20px 15px;
+    margin: 20px 0 20px 4px;
 }
 .btn-orange{
   margin: 20px 0px;
 }
-input[type=text]{
-  margin-left: 10px;
-}
-.search_bar input[type=radio]{
-  margin-left: 17px;
+h3{
+  margin: 0 0 20px 0;
 }
