--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -53,7 +53,7 @@
   float: left;
   width: 20%;
   margin: 40px 30px 0px 0px;
-  background: #ededed;
+  background: #F6F6F6;
   border-radius: 5px;
   -webkit-border-radius: 5px;
   padding: 20px
