styled search results inspired by NPR redesign

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -63,6 +63,11 @@
 float:none;
 margin-right:1px;
 }
+.trialResults p,
+.trialResults h4{
+  display: inline;
+}
+
 .search_results{
   float:left;
   width: 70%;
