--- a/app/assets/stylesheets/trials.css.scss
+++ b/app/assets/stylesheets/trials.css.scss
@@ -61,8 +61,26 @@ list-style: none;
 li{
 	margin:0;
 }
+.trialResults{
+	margin-bottom: 2em;
+	background: #F6F6F6;
+	padding: 20px;
+}
+.inline p,
+.inline h4{
+font-size: .9em;
+left: 1.2em;
+}
+.inline p{
+	margin-right: .5em;
 
-
+}
+.trialResults p,
+.trialResults h4{
+  display: inline;
+  position: relative;
+	left: 1em;
+}
 
 #td_contents{
 /*	width:70%;*/
